--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,8 +1,15 @@
 stages:
   annotator_performance:
-    cmd: R -e "renv::activate()" && poetry run papermill code/01-annotator_performance.ipynb code/01-annotator_performance.ipynb
+    cmd: poetry run papermill code/01-annotator_performance.ipynb code/01-annotator_performance.ipynb
     deps:
       - code/01-annotator_performance.ipynb
       - data/labeled_data/full.csv.zip
     outs:
       - results/tables/coder_agreement.tex
+  run_model:
+    cmd: poetry run papermill code/02-create_gbert_model.ipynb code/02-create_gbert_model.ipynb
+    deps:
+      - data/labeled_data/train.csv.zip
+      - data/labeled_data/test.csv.zip
+    outs:
+      - results/popbert_model/
