--- a/.dvc/config
+++ b/.dvc/config
@@ -2,7 +2,7 @@
     remote = minio
     autostage = true
 ['remote "minio"']
-    url = s3://ytpop
+    url = s3://popbert
     endpointurl = http://193.196.53.63
     access_key_id = qo5WAo6sR2f7rAHZKH1y
     secret_access_key = nGUQaLxLPjscH1xdJkCH6WhlsJuGEFfXNRlGGF0P
