--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,7 +6,7 @@ stages:
       - data/labeled_data/full.csv.zip
     outs:
       - results/tables/coder_agreement.tex
-  run_model:
+  create_gbert_model:
     cmd: poetry run papermill code/02-create_gbert_model.ipynb code/02-create_gbert_model.ipynb
     deps:
       - code/02-create_gbert_model.ipynb
@@ -15,14 +15,14 @@ stages:
       - data/labeled_data/test.csv.zip
     outs:
       - results/popbert_model/
-  create_predictions:
+  make_predictions:
     cmd: poetry run papermill code/03-make_predictions.ipynb code/03-make_predictions.ipynb
     deps:
       - code/03-make_predictions.ipynb
       - data/raw/sentences.parquet.gzip
     outs:
       - data/interim/sentence_predictions.parquet.gzip
-  all_dimensions_plot:
+  all_dimensions:
     cmd: poetry run papermill code/04-all_dimensions.ipynb code/04-all_dimensions.ipynb
     deps:
       - code/04-all_dimensions.ipynb
@@ -30,4 +30,19 @@ stages:
       - data/interim/sentence_predictions.parquet.gzip
     outs:
       - results/figures/all_dimensions_normalized.pdf
-    
+  run_gruendl:
+    cmd: Rscript code/07-run_gruendl.R
+    deps:
+      - code/07-run_gruendl.R
+      - data/raw/sentences.parquet.gzip
+    outs:
+      - data/interim/gruendl.parquet.gzip
+  selected_examples:
+    cmd: poetry run papermill code/08-selected_examples_table.ipynb code/08-selected_examples_table.ipynb
+    deps:
+      - code/08-selected_examples_table.ipynb
+      - data/raw/sentences.parquet.gzip
+      - data/interim/sentence_predictions.parquet.gzip
+      - data/interim/gruendl.parquet.gzip
+    outs:
+      - results/tables/selected_examples.tex
